# TAAL

./: .gitignore  README.md  devlog.md  gradle.properties  settings.gradle.kts  taal-keystore.jks
composeApp/: build.gradle.kts
composeApp/native/: AudioEngine.cpp  AudioEngine.h  AudioEngine_JNI.cpp  miniaudio.cpp
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/org/example/project/: AppContext.kt  AppContextHolder.kt  AppSettingsDataStore.kt  AudioExporter.android.kt  AudioImporter.kt  AudioPlayer.kt  FileUtils.android.kt  MainActivity.kt  PlatformUtils.kt  SettingsManager.android.kt  Utils.android.kt  VoiceRecorder.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/appleMain/kotlin/org/example/project/: VoiceRecorder.apple.kt
composeApp/src/commonMain/kotlin/org/example/project/: AboutScreen.kt  AddBeatDialogue.kt  App.kt  AudioExporter.kt  AudioImporter.kt  AudioPlayer.kt  Beat.kt  BeatEditorScreen.kt  BeatEditorState.kt  BeatRepository.kt  BeatSelector.kt  Chord.kt  DrumBeatEditor.kt  DrumEditorState.kt  Drumkit.kt  FileUtils.kt  GuitarBeatEditor.kt  GuitarEditorState.kt  Instruments.kt  IntrumentCategory.kt  Tile.kt  (+11 more)
composeApp/src/cpp/: CMakeLists.txt  miniaudio_engine.cpp  miniaudio_engine.h  platform_android.cpp
composeApp/src/jvmMain/resources/: logo.icns
composeApp/src/main/cpp/: audioengine.cpp
composeApp/src/webMain/resources/: index.html
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+22 files in other folders)
